# agent-homelab

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  homelab.example.yaml  pyproject.toml
.codex/: policy-selector-install.json
.github/workflows/: ci.yml
docs/: security-scanning.md  supported-versions.md
docs/architecture/: overview.md
docs/guides/: authentication.md  bastion-relay.md  borg-backups.md  direct-host.md  disaster-recovery.md  first-homelab.md  oauth-relay.md  service-catalog.md
docs/releases/: v0.1.0-rc.1.md  v0.2.0-rc.1.md  v0.2.0-rc.2.md
recipes/borg-backup/: README.md  agent-homelab-borg-backup.service  agent-homelab-borg-backup.timer  backup.example.yaml
recipes/oauth-relay/: Dockerfile  THREAT_MODEL.md  adapter-example.py  credential-health.example.yaml  gog-gws-adapter.example.yaml  gog-gws-adapter.py  oauth-relay.example.yaml  oauth-relay.service
recipes/services/: README.md  catalog.yaml
schema/: README.md
scripts/: inspect-dist.py  package-skills.py  scan-public.sh  scan_public.py  validate-recipes.py  validate-skills.py
skills/homelab-bootstrap/: SKILL.md
skills/homelab-borg-backup/: SKILL.md
skills/homelab-maintenance/: SKILL.md
skills/homelab-oauth-relay/: SKILL.md
skills/homelab-service-catalog/: SKILL.md
skills/homelab-service-ingress/: SKILL.md
skills/homelab-troubleshooter/: SKILL.md
src/agent_homelab/: __init__.py  bootstrap.py  borg_backup.py  cli.py  credential_health.py  deploy.py  homelab.schema.json  migrations.py  model.py  (+4 more)
tests/: test_bootstrap.py  test_borg_backup.py  test_cli.py  test_deploy.py  test_migrations.py  test_model.py  test_oauth_relay.py  test_recipes.py  test_render.py  test_verify.py
(+31 files in other folders)
